# What-Im-Thinking-Of-Serwer

./: .gitignore  CMakeLists.txt  GameManager.cpp  GameManager.h  MessagesHandler.cpp  SocketManager.cpp  User.cpp  User.h
WhatImThinkingOf/ConnectionManagement/: Message.h  MessageType.h  MessagesHandler.cpp  MessagesHandler.h  SocketManager.cpp
WhatImThinkingOf/GameManagement/: GameManager.cpp  GameManager.h
WhatImThinkingOf/UserManagement/: User.cpp  User.h  UserA.cpp  UserA.h
