cmake_minimum_required(VERSION 3.1)
project(SK2)
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Debug")
endif()
set(CMAKE_CXX_STANDARD 17)
find_package(Threads)
add_executable(SK2 SocketManager.cpp GameManager.cpp GameManager.h User.cpp User.h MessagesHandler.cpp)
target_link_libraries(SK2 ${CMAKE_THREAD_LIBS_INIT})